kubernetes/unifi/logging/vector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vector
spec:
  ports:
  - name: vector
    port: 80
    protocol: TCP
  type: ClusterIP
