kubernetes/unifi/logging/vector/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vector
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1m
spec:
  ingressClassName: nginx-internal
  rules:
    - host: "vector.internal.yuha0.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: vector
                port:
                  number: 80
